fixed compile error